@@ -1,3 +1,11 @@
+2010-01-29  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* Makefile.am:
+	Reverting 663183355f4c.  There is already
+	a stamps/plugin.stamp target for IcedTea7.
+	Add plugin alias and absolute path to plugin tree
+	in EXTRA_DIST.
+	
 2010-01-21  Matthias Klose  <doko@ubuntu.com>
 
 	* Makefile.am: Don't hide errors in statement sequences building
